--- a/src/style.scss
+++ b/src/style.scss
@@ -486,6 +486,7 @@ body {
         background-image: url(/img/pagination-arrow-back.svg);
         background-repeat: no-repeat;
         background-position: bottom 50% left 50%;
+        cursor: pointer;
     }
 
     .pagination__button-page-forward {
@@ -497,6 +498,7 @@ body {
         background-repeat: no-repeat;
         background-position: bottom 50% left 50%;
         margin-left: 20px;
+        cursor: pointer;
     }
 
     .pagination__main {
@@ -509,11 +511,13 @@ body {
         }
         
         .pagination__page {
-                padding: 9px 14px;
-                width: 10px;
+                height: 37px;
+                width: 37px;
                 text-decoration: none;
                 display: inline-block;
                 color: $main-text-color;
+                border: none;
+                border-radius: 50%;
               
                 .active {
                     background-color: $button-primary-color;
