--- a/src/style.scss
+++ b/src/style.scss
@@ -175,7 +175,7 @@ body {
             
                 .slider {
                   position: relative;
-                  width: 330px;
+                  width: 95%;
                 }
                 
                 .slider__track,
@@ -227,7 +227,7 @@ body {
                   pointer-events: none;
                   position: absolute;
                   height: 0;
-                  width: 330px;
+                  width: 95%;
                   outline: none;
                 }
                 
