--- a/src/style.scss
+++ b/src/style.scss
@@ -116,19 +116,32 @@ body {
     }
   }
 
-  .search-resluts {
+  .search-results {
     display: flex;
     justify-content: space-between;
     width: 70%;
 
-    .search-resluts__number {
+    .search-results__number {
       align-items: center;
       font-size: 18px;
       line-height: 21px;
       font-weight: $font-weight-medium;
     }
 
-    .search-resluts__wishlist-button {
+    .search-results__discounted-button {
+      margin-right: 8px;
+      height: 25px;
+      width: 25px;
+      border: none;
+      border-radius: 4px;
+      background-color: $button-primary-color;
+      background-image: url(/img/discount-btn.svg);
+      background-repeat: no-repeat;
+      background-position: bottom 50% left 50%;
+      cursor: pointer;
+    }
+
+    .search-results__wishlist-button {
       height: 25px;
       width: 25px;
       border: none;
@@ -600,8 +613,8 @@ body {
       .merchandise-cards__image {
         margin-top: 20px;
         margin-bottom: 40px;
-        max-height: 200px;
-        max-width: 200px;
+        max-height: 180px;
+        max-width: 180px;
       }
 
       .merchandise-cards__rating-and-price {
@@ -611,15 +624,23 @@ body {
         margin: 0% 10% 0% 10%;
 
         .merchandise-cards__rating {
+          bottom: 150px;
+          position: absolute;
           color: $elements-main-color;
           padding: 2% 10% 2% 5%;
           background-color: $button-primary-color;
           background-image: url(/img/rating-star.svg);
           background-repeat: no-repeat;
           background-position: bottom 50% left 90%;
+          background-size: 20px;
           border-radius: 4px;
-          background-size: 25%;
           font-size: 15px;
+        }
+
+        .merchandise-cards__price {
+          right: 25px;
+          bottom: 155px;
+          position: absolute;
         }
       }
 
@@ -629,11 +650,14 @@ body {
         color: $main-text-color;
         padding: 0% 0% 2% 7%;
         margin: 2%;
+        bottom: 60px;
+        position: absolute;
 
         .merchandise-cards__item-name {
           font-size: 16px;
           line-height: 19px;
           font-weight: $font-weight-medium;
+          cursor: pointer;
         }
 
         .merchandise-cards__item-description {
@@ -664,6 +688,7 @@ body {
           background-size: 10%;
           background-repeat: no-repeat;
           background-position: left 15% bottom 50%;
+          cursor: pointer;
         }
 
         .merchandise-cards__add-to-cart-button {
@@ -677,10 +702,11 @@ body {
           background-size: 10%;
           background-repeat: no-repeat;
           background-position: left 5% bottom 50%;
+          cursor: pointer;
         }
       }
     }
-
+    
     .wishlist-cards-wrapper__message {
       font-size: 24px;
     }
