Item page can be changed via url
	modified:   src/App.js
	modified:   src/components/cards-container/card/card.js
	modified:   src/components/itempage/itempage.js
	modified:   src/redux/minAndMaxPriceSlice.js
	modified:   src/style.scss

--- a/src/style.scss
+++ b/src/style.scss
@@ -727,6 +727,7 @@ body {
   background-image: url(/img/pagination-arrow-back.svg);
   background-repeat: no-repeat;
   background-position: left 5% bottom 50%;
+  cursor: pointer;
 }
 
 .item-container {
